tests/parsing/smtlib/v2.6/errors/035_match_case_bad_pattern_1.expected
File "tests/parsing/smtlib/v2.6/errors/035_match_case_bad_pattern_1.smt2", line 3, character 41-42:
3 | (define-fun f ((x t)) t (match x ((A B) (_ x))))
                                             ^
Error while parsing a match case, read the reserved word '_',
      but expected a pattern, i.e. either a symbol or a datatype pattern of
      the form "(symbol symbol+)"; note that keywords and reserved words
      (such as '_', 'as', ...) are not symbols, and thus are not allowed
      here.
